--- a/BayesianColibri/baco.tex
+++ b/BayesianColibri/baco.tex
@@ -243,14 +243,34 @@ The CRP is a probability distribution on partitions. The distribtuion is built u
 
 \end{frame}
 
+\begin{frame}
+    \frametitle{Finally, Language Models}
+%    We use $n$-gram LM which use the conditional distributions of each word given a context of $n-1$ words: \[ P(\mathbf{w})\aprox\prod_{i}P(w_i|w_{i-n+1}^{i-1}) \]
+
+    \begin{block}{Unigram LM with PYP}
+        $W$ is a fixed vocabulary of $V$ words. For each $w\in W$ let $G(w)$ be the probability of $w$, and $G=[G(w)]_{w\in W}$ the vector of word probabilities. Uniform prior with $G_0(w) = \frac{1}{V}$.
+We can then place a PYP prior on $G$: \[ G \sim \operatorname{PYP}(\alpha, \sigma, G_0). \] 
+    \end{block}
+
+    \begin{block}{Chinese Restaurant Franchise}
+        \begin{itemize}
+            \item A Chinese Restaurant Franchise consists of Chinese Restaurants
+            \item A Chinese Restaurant has an unbounded number of tables
+            \item There is a global menu with an unbounded number of dishes
+        \end{itemize}
+    \end{block}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Hierarchical PYP}
+\end{frame}
+
+
 \end{document}
 
 
 
 
-\begin{frame}
-    \frametitle{Finally, Language Models}
-\end{frame}
 
 
 
@@ -277,30 +297,3 @@ Double Hierarchical Pitman-Yor Processes
 
 
 
-\begin{frame}
-So, how do we get non-parametrics?
-
-General Stick-breaking prior:
-\[ P(\cdot) = \sum_{k=1}^N p_k\delta_{Z_k}(\cdot) \]
-The generating values $Z_k$ come from $H$, and the weights are assigned
-\[ p_k = \prod_{i=1}^{k-1}(1-V_i)V_k\]
-with $V_k \sim \operatorname{Beta}(a_k, b_k)$
-
-Pitman-Yor distribution (PYD), or the two-parameter Poisson-Dirichlet distribution, is a special case,
-\[ \operatorname{PY}(a,b,H), a\in[0,1), b>-a \]
-s.t. $V_k \sim \operatorname{Beta}(1-a, a+bk)$, and the weights ${p_k}^{k=1}^N$ induce a power-law distribution:
-\[ P(n_w)\propto n_w^{1(1+a)}\]
-\end{frame}
-
-\begin{frame}
-So why does the PYD induce a power-law?
-If you think of the proportions broken off a remaining stick:
-\[ V_k \sim \operatorname{Beta}(1-a, b+ka)\]
-then the expected value is:
-\[ E[V_k] = \frac{1-a}{1+b+(k-1)a \]
-
-Setting $a=0$, reduces the PYP to a DP.
-\end{frame}
-
-
-\end{document}
