More changes, language models

--- a/BayesianColibri/baco.tex
+++ b/BayesianColibri/baco.tex
@@ -111,7 +111,7 @@ KMeans clustering as frequentist and parametric approach.
     
     \begin{block}{Partitions and Clusters}
         \begin{itemize}
-            \item A partition of $N$ points is denoted as $\pi_\{[N]\}$
+            \item A partition of $N$ points is denoted as $\pi_{[N]}$
             \begin{itemize}
                 \item $\pi_{[10]} = \{\{3,5\},\{1,2,9,10\},\{4,6,7\},\{8\}\}$
                 \item $\pi_{[N]}$ is a set of subsets, where subsets are clusters
@@ -334,6 +334,8 @@ The CRP is a probability distribution on partitions. The distribtuion is built u
 
 \begin{frame}
     \frametitle{From $n$-gram to $Y$-gram}
+
+    We want to beat a MKN approach with skipgrams\footfullcite{Pickhardt14}.
 
     here some numbers from the grams in different corpora
 
