--- a/rured/beamerouterthemeruredplain.sty
+++ b/rured/beamerouterthemeruredplain.sty
@@ -77,7 +77,7 @@
             \pgfusepath{fill}
             % page number
             \ifnum\thepage=1\relax\else
-              \pgftext[at=\pgfpoint{\the\paperwidth-0.76cm}{\the\paperheight-2.3cm},left,base]{\tiny\thepage}%
+              \pgftext[at=\pgfpoint{\the\paperwidth-0.76cm}{\the\paperheight-2.3cm},left,base]{\tiny\theframe}%
             \fi
           \fi
 
